--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@tailwindcss/cli": "^4.1.13",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "react-router": "^7.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
