--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "test-page",
+  "homepage": "https://NoviansyahSukma.github.io/test-page/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
